# lumau-backend

./: .gitignore  Cargo.toml  app.db  diesel.toml
migrations/2023-08-19-050430_links/: up.sql
migrations/2023-08-19-135241_create_admin_users/: down.sql  up.sql
sedders/: setup_db.sh
sedders/sql/: create_admin_user.sql  db.sql  selects.sql
src/: lib_old.rs  main.rs  models.rs  routes.rs  schema.rs
src/config/: config.rs  mod.rs  state.rs  types.rs
src/middlewares/: jwt_auth.rs
src/modules/: mod.rs
src/modules/admin_users/: models.rs  routes.rs  services.rs
src/modules/auth/: models.rs  routes.rs
src/modules/version/: routes.rs
templates/: index.html
