[package]
edition = "2021"
name = "lumau_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
anyhow = "1.0.58"
argon2 = "0.5.1"
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "2.1", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.19"
rand_core = {version = "0.6.4", features = ["std"]}
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.105"
thiserror = "1.0"
